--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head><h1>my portfolio</h1>
-<body>
-    <p>my names are simon</p>
-    <img src="https://i.pinimg.com/1200x/19/ba/8a/19ba8a5e300913a60d59dbf0e340dd29.jpg" alt="huyruwuqy">
+    <title>my journal</title>
+</head> <h1>MY JOURNAL</h1>
+<H2>CHAPTER 1</H2>
+<body><P>side border <i>anywhere in the city</i>now we contiue from here where we have mutiple suggestions on where
+do we go to another line or what happens</P>
     
 </body>
 </html>
