--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my journal</title>
-</head> <h1>MY JOURNAL</h1>
-<H2>CHAPTER 1</H2>
-<body><P>side border <i>anywhere in the city</i>now we contiue from here where we have mutiple suggestions on where
-do we go to another line or what happens</P>
+    <title>My firtst website</title>
+</head>
+<body>
+    <h1>my portfolio</h1>
+    <p>this is paragraph about my website</p>
+    <hr>
+    <p>note how <strong>it</strong> it <em>it creates</em>creates a new line</p>
+    
+    <ul>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+    </ul>
+
+    <ol>
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+    </ol>
+
+    <a href="#">visit this website</a>
+
+    <img src="IMG_20241023_175402.jpg" alt="this is an image">
     
 </body>
 </html>
