--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <a href="#">visit this website</a>
 
-    <img src="IMG_20241023_175402.jpg" alt="this is an image">
-    
+   
+    <video src="WhatsApp Video 2025-07-19 at 06.40.44_dc72de47.mp4"controls style="width 100%;height: auto;display: block;"></video>
 </body>
 </html>
